--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -47,16 +47,7 @@ layout: default
                 </section>
                 {% endif %}
 
-                <!-- Friends Blog -->
-                {% if site.friends %}
-                <hr>
-                <h5>FRIENDS</h5>
-                <ul class="list-inline">
-                    {% for friend in site.friends %}
-                        <li><a href="{{friend.href}}">{{friend.title}}</a></li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
+                <!-- Friends Blog 朋友博客 删除-->
             </div>
         {% else %}
 
