--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -105,6 +105,12 @@ layout: default
                         {% if site.email %}
                             <p>✉️ {{site.email}}</p>
                         {% endif %}
+                        <!--交流平台-->
+                        <p> </p>
+                        <p> 电  报 : https://t.me/aacoin2018 </p>
+                        <p> 币  用 : https://0.plus/aacoin2018</p>
+                        <p> AA家族 : 696805849</p>
+                        <p> qq  群 : 383604633</p>
                     </div>
                 </section>
                 <!-- Friends Blog -->
