--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -107,10 +107,10 @@ layout: default
                         {% endif %}
                         <!--交流平台-->
                         <p> </p>
-                        <p> 电  报 : https://t.me/aacoin2018 </p>
-                        <p> 币  用 : https://0.plus/aacoin2018</p>
-                        <p> AA家族 : 696805849</p>
-                        <p> qq  群 : 383604633</p>
+                        <p style="color:black"> <b> 电  报 : https://t.me/aacoin2018 </b></p>
+                        <p style="color:black">  <b> 币  用 : https://0.plus/aacoin2018 </b></p>
+                        <p style="color:black"> <b> AA家族 : 696805849 </b></p>
+                        <p style="color:black"> <b> qq  群 : 383604633 </b></p>
                     </div>
                 </section>
                 <!-- Friends Blog -->
