--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -103,7 +103,7 @@ layout: default
 
 												<!--页面中部表示内容-->
                         {% if site.email %}
-                            <p>✉️ {{site.email}}</p>
+                            <p style="color:black"><b> {{site.email}}</b></p>
                         {% endif %}
                         <!--交流平台-->
                         <p> </p>
