--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -98,12 +98,12 @@ layout: default
                             </a>
                         {% endif %}
                         {% if site.sidebar-about-description %}
-                            <p>{{site.sidebar-about-description}}</p>
+                            <p style="color:black;font-size:20px;"> <b> {{site.sidebar-about-description}} </b></p>
                         {% endif %}
 
 												<!--页面中部表示内容-->
                         {% if site.email %}
-                            <p style="color:black"><b> {{site.email}}</b></p>
+                            <p style="color:black"><b> 邮箱 : {{site.email}}</b></p>
                         {% endif %}
                         <!--交流平台-->
                         <p> </p>
