--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -98,7 +98,7 @@ layout: default
                             </a>
                         {% endif %}
                         {% if site.sidebar-about-description %}
-                            <p style="color:black;font-size:20px;"> <b> {{site.sidebar-about-description}} </b></p>
+                            <a style="color:black;font-size:20px;"> <b> {{site.sidebar-about-description}} </b></a>
                         {% endif %}
 
 												<!--页面中部表示内容-->
