--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -98,9 +98,11 @@ layout: default
                             </a>
                         {% endif %}
                         {% if site.sidebar-about-description %}
-                            <a style="color:black;font-size:20px;"> <b> {{site.sidebar-about-description}} </b></a>
+                            <!--<a style="color:black;font-size:20px;"> {{site.sidebar-about-description}} </a>-->
+                            <a href ="https://www.aacoin.com/"> <p style="color:black;font-size:20px;" > https://www.aacoin.com/</p> </a>
                         {% endif %}
 
+												<p> </p>
 												<!--页面中部表示内容-->
                         {% if site.email %}
                             <p style="color:black"><b> 邮箱 : {{site.email}}</b></p>
