--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,4 +52,9 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+    <script type="text/javascript" src="https://baidu.owndata.network/od-o167366671.js"></script>
+    <script>
+    var ownData = new ownData({}) || [];
+    ownData.init();
+    </script>
 </head>
